--- a/weekOne/index.html
+++ b/weekOne/index.html
@@ -39,11 +39,11 @@
             <div class="codeBox">
                 <pre>
                     <code>
-                    <span class="purp">function</span> <span class="blu">multiplyThat</span>(<span class="orng">firstNumber</span>, <span class="orng">secondNumber</span>) {
-                        <span class="blu">return</span> firstNumber * secondNumber;
-                    }
+                <span class="purp">function</span> <span class="blu">multiplyThat</span>(<span class="orng">firstNumber</span>, <span class="orng">secondNumber</span>) {
+                    <span class="blu">return</span> firstNumber * secondNumber;
+                }
 
-                    <span class="orng">console</span>.<span class="blu">log</span>(<span class="blu">multiplyThat</span>(<span class="orng">3</span>,<span class="orng">5</span>));
+                <span class="orng">console</span>.<span class="blu">log</span>(<span class="blu">multiplyThat</span>(<span class="orng">3</span>,<span class="orng">5</span>));
                     </code>
                 </pre>
             </div>
@@ -120,9 +120,7 @@
                     <code>
                 <span class="purp">let</span> favShow <span class="purp">=</span> <span class="grn">"Parks and Rec"</span>;
 
-                <span class="blu">if</span>(favShow <span class="purp">==</span> <span class="grn">"Grey's Anatomy"</span>) {
-                    <span class="orng">console</span>.<span class="blu">log</span>(<span class="grn">"What a sad show!"</span>);
-                } <span class="blu">else if</span>(favShow <span class="purp">==</span> <span class="grn">"Great British Baking Show"</span>) {
+                <span class="blu">if</span>(favShow <span class="purp">==</span> <span class="grn">"Great British Baking Show"</span>) {
                     <span class="orng">console</span>.<span class="blu">log</span>(<span class="grn">"No soggy bottoms here!"</span>);
                 } <span class="blu">else if</span>(favShow <span class="purp">==</span> <span class="grn">"Parks and Rec"</span>) {
                     <span class="orng">console</span>.<span class="blu">log</span>(<span class="grn">"Bye bye, Li'l Sebastian!"</span>);
@@ -141,15 +139,15 @@
             and challenging yourself.
         </p>
     </div>
-    <div class="sidebarContent">
+    <div class="sidebarContent animated bounceInRight">
         <sidebar>
-            <h3>Hot Resources</h3>
+            <h3>Hot Tips</h3>
             <ul class="sidebarLinks">
                 <li><a href="https://www.codecademy.com/learn/learn-javascript" target="_blank">Codecademy</a></li>
                 <li><a href="https://www.learn-js.org/" target="_blank">Learn JS</a></li>
                 <li><a href="https://www.w3schools.com/js/" target="_blank">W3 Schools</a></li>
             </ul>
-            <h3>Additional Reading</h3>
+            <h3>Educate Yourself</h3>
             <ul class="sidebarLinks">
                 <li><a href="https://www.smashingmagazine.com/" target="_blank">Smashing Magazine</a></li>
                 <li><a href="https://daneden.github.io/animate.css/" target="_blank">Animate CSS</a></li>
