--- a/weekOne/critter.html
+++ b/weekOne/critter.html
@@ -27,6 +27,7 @@
         </div>
         <div class="mouth">
             <div class="tooth"></div>
+            <div class="tooth2"></div>
         </div>
     </div>
     <div class="belly"></div>
